2012-07-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/standard.c (f_asin, f_asinh): The patch of March 2011 got the
	overall sign wrong in the (x == 0.0) case.
	Bug #3542862

2012-07-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_mouse.js (mouse_update):  Allow for the possibility
	of mapping the x2 and y2 axis coordinates through plot-specific mapping
	functions gnuplot.x2_mapping(), gnuplot.y2_mapping() defined elsewhere.

2012-07-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/standard.c (f_acos): acos(x) was returning the complex conjugate
	of the correct result for complex input x with imag(x) > 0.
	Bug #3542862

	* src/parse.c (set_up_columnheader_parsing):  Take the column header 
	from the second using spec (normally the Y coordinate) to satisfy
	set key autotitle columnhead;  plot 'data' using "X":"Y"
	Bug #3542065

	* src/datafile.c (plot_option_using):  Track the appropriate column
	header when the column is specified via a non-string variable; e.g.
	plot for [i=1:N] 'data' using 1:(column(i))
	Bug #3542065

2012-07-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_options): Specifying only the font size (ie. ",8")
	would overwrite the font name with a bogus string. Bug fix.

	* config/config.oww config/config.nt config/config.mgw
	config/makefile.cyg config/makefile.unx config/cygwin/Makefile
	config/mingw/Makefile config/msvc/Makefile config/watcom/Makefile
	src/command.c src/winmain.c:
	Remove support for old style Windows help format.

	* src/win/wgnuplot.hpj: Removed.

2012-07-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (draw_edge): Fix broken tracking of top/bottom color
	distinction in hidden3d plots when the line colors are not specified in
	palette or RGB mode.
	Bugfix

2012-07-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (undefine_command): Allow "undefine $datablockname".

2012-07-07  Bastian Maerkisch  <bmaerkisch@web.de>
